// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StartSessionForm render should render an empty form with no action 1`] = `
Object {
  "flow": Object {
    "value": null,
  },
  "recipients": Object {
    "value": Array [],
  },
  "valid": false,
}
`;

exports[`StartSessionForm render should render an empty form with no action 2`] = `
<Dialog
  buttons={
    Object {
      "primary": Object {
        "name": "Ok",
        "onClick": [Function],
      },
      "secondary": Object {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  headerClass="start_session"
  title="Start Somebody Else"
>
  <TypeList
    __className=""
    initialType={
      Object {
        "component": [Function],
        "description": "Start somebody else in a flow",
        "form": [Function],
        "localization": [Function],
        "localizeableKeys": Array [
          "exits",
        ],
        "name": "Start Somebody Else",
        "type": "start_session",
      }
    }
    onChange={[MockFunction]}
  />
  <div>
    <AssetSelector
      completion={Object {}}
      entry={
        Object {
          "value": Array [],
        }
      }
      multi={true}
      name="Recipients"
      onChange={[Function]}
      searchable={true}
    />
    <p />
    <AssetSelector
      entry={
        Object {
          "value": null,
        }
      }
      name="Flow"
      onChange={[Function]}
      placeholder="Select the flow to start"
      searchable={true}
    />
  </div>
</Dialog>
`;

exports[`StartSessionForm render should render self, children with base props 1`] = `
<Dialog
  buttons={
    Object {
      "primary": Object {
        "name": "Ok",
        "onClick": [Function],
      },
      "secondary": Object {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  headerClass="start_session"
  title="Start Somebody Else"
>
  <TypeList
    __className=""
    initialType={
      Object {
        "component": [Function],
        "description": "Start somebody else in a flow",
        "form": [Function],
        "localization": [Function],
        "localizeableKeys": Array [
          "exits",
        ],
        "name": "Start Somebody Else",
        "type": "start_session",
      }
    }
    onChange={[MockFunction]}
  />
  <div>
    <AssetSelector
      completion={Object {}}
      entry={
        Object {
          "value": Array [
            Object {
              "id": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
              "name": "Cat Fanciers",
              "type": "group",
            },
            Object {
              "id": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
              "name": "Cat Facts",
              "type": "group",
            },
            Object {
              "id": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
              "name": "Kellan Alexander",
              "type": "contact",
            },
            Object {
              "id": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
              "name": "Norbert Kwizera",
              "type": "contact",
            },
            Object {
              "id": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
              "name": "Rowan Seymour",
              "type": "contact",
            },
          ],
        }
      }
      multi={true}
      name="Recipients"
      onChange={[Function]}
      searchable={true}
    />
    <p />
    <AssetSelector
      entry={
        Object {
          "value": Object {
            "id": "flow_uuid",
            "name": "Flow to Start",
            "type": "flow",
          },
        }
      }
      name="Flow"
      onChange={[Function]}
      placeholder="Select the flow to start"
      searchable={true}
    />
  </div>
</Dialog>
`;

exports[`StartSessionForm updates should allow switching from router 1`] = `
Array [
  Object {
    "contacts": Array [],
    "flow": Object {
      "name": "My Flow",
      "uuid": "my_flow",
    },
    "groups": Array [
      Object {
        "name": "Subscriber",
        "uuid": "68223118-109f-442a-aed3-7bb3e1eab687",
      },
    ],
    "legacy_vars": Array [],
    "type": "start_session",
    "uuid": "132de855-4042-4dc1-a18f-cc2e6a8f790a",
  },
]
`;

exports[`StartSessionForm updates should save changes 1`] = `
Object {
  "flow": Object {
    "validationFailures": Array [],
    "value": Object {
      "id": "my_flow",
      "name": "My Flow",
      "type": "flow",
    },
  },
  "recipients": Object {
    "validationFailures": Array [],
    "value": Array [
      Object {
        "id": "68223118-109f-442a-aed3-7bb3e1eab687",
        "name": "Subscriber",
        "type": "group",
      },
    ],
  },
  "valid": true,
}
`;

exports[`StartSessionForm updates should save changes 2`] = `
Array [
  Object {
    "contacts": Array [],
    "flow": Object {
      "name": "My Flow",
      "uuid": "my_flow",
    },
    "groups": Array [
      Object {
        "name": "Subscriber",
        "uuid": "68223118-109f-442a-aed3-7bb3e1eab687",
      },
    ],
    "legacy_vars": Array [],
    "type": "start_session",
    "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
  },
]
`;
